--- a/Example/package.json
+++ b/Example/package.json
@@ -10,8 +10,8 @@
     "lint": "eslint ."
   },
   "dependencies": {
-    "react": "16.13.1",
-    "react-native": "0.63.2",
+    "react": "18.1.0,
+    "react-native": "0.70.0",
     "recyclerlistview": "3.0.0"
   },
   "devDependencies": {
